test/sema/imported-c-header-has-file-scope.delta
// RUN: %not %delta -typecheck %s %p/inputs/imported-c-header-has-file-scope/second-file.delta | %FileCheck %s

import "inputs/imported-c-header-has-file-scope/a.h"

// CHECK: second-file.delta:2:5: error: unknown identifier 'foo'
